# ChangeLog for dev-python/pycups
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pycups/ChangeLog,v 1.41 2011/10/04 17:20:31 reavertm Exp $

*pycups-1.9.59 (04 Oct 2011)

  04 Oct 2011; Maciej Mrozowski <reavertm@gentoo.org> +pycups-1.9.59.ebuild:
  Version bump

  12 Sep 2011; Maciej Mrozowski <reavertm@gentoo.org> pycups-1.9.58.ebuild,
  pycups-1.9.49.ebuild, pycups-1.9.57.ebuild:
  Does not build against python3, bug 382579. Bump to EAPI3.

  06 Sep 2011; Maciej Mrozowski <reavertm@gentoo.org> metadata.xml:
  My email fixed.

*pycups-1.9.58 (22 Aug 2011)

  22 Aug 2011; Maciej Mrozowski <reavertm@gentoo.org> +pycups-1.9.58.ebuild:
  Version bump

  10 Aug 2011; Markus Meier <maekke@gentoo.org> pycups-1.9.57.ebuild:
  arm stable, bug #349496

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> pycups-1.9.57.ebuild:
  alpha/ia64/sparc stable wrt #349496

  24 Jul 2011; Markos Chandras <hwoarang@gentoo.org> pycups-1.9.57.ebuild:
  Stable on amd64 wrt bug #349496

  19 Jul 2011; Markus Meier <maekke@gentoo.org> pycups-1.9.57.ebuild:
  x86 stable, bug #349496

  18 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> pycups-1.9.57.ebuild:
  ppc/ppc64 stable wrt #349496

*pycups-1.9.57 (13 Jun 2011)

  13 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org> -pycups-1.9.55.ebuild,
  +pycups-1.9.57.ebuild:
  Version bump (brings <cups-1.4 support), remove old

*pycups-1.9.55 (30 Apr 2011)

  30 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -pycups-1.9.53.ebuild,
  +pycups-1.9.55.ebuild:
  Version bump to latest. Drop older.

  27 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pycups-1.9.46.ebuild, pycups-1.9.49.ebuild, pycups-1.9.51.ebuild,
  pycups-1.9.52.ebuild, pycups-1.9.53.ebuild:
  Restrict Jython ABIs.

*pycups-1.9.53 (27 Jan 2011)

  27 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org> +pycups-1.9.53.ebuild:
  Version bump
